# AB6_MuJoCo_Course

./: MUJOCO_LOG.TXT  README.md  Teleoperation.py  background.xml  cartesian_pid_control.py  forward_kinematics.py  gravity_compensation.py  gravity_compensationclass  inverse_kinematics.py  joint_pid_control.py  robot.xml  run_mujoco.ipynb  scene.xml  test_vertical_robot.py  workspace.py
cartesian_impedance_control/: cartesian_impedance_control_corrected.py  cartesian_impedance_control_custom_v2.py  cartesian_impedance_control_custom_v3.py  cartesian_impedance_control_v2.py  cartesian_impedance_control_v3.py  cartesian_impedance_control_with_disturbance.py  cartesian_impednace_control_v3_disturbance.py
cartesian_teleop/: cartesian_teleop_kdl.py  cartesian_teleop_simple.py
forward_kinematics/: FK_custom.py  FK_kdl.py  FK_maths.py  FK_mujoco_inbuilt.py  package.xml  setup.py
gravity_comp/: gravity_compensation.py  gravity_compensation_actuators.py
gravity_compensation/: gravity_compensation_corrected.py  gravity_compensation_vertical.py
inverse_kinematics/: IK_custom.py  IK_kdl.py  IK_maths.py
joint_impedance_control/: joint_impedance_control.py  joint_impedance_control_corrected.py  joint_impedance_control_v1.py  joint_impedance_control_with_disturbance.py
manipulator_description/: package.xml  setup.py
manipulator_description/config/: controllers.yaml
manipulator_description/launch/: display.launch.py  gazebo.launch.py
manipulator_description/rviz/: display.rviz  gazebo.rviz
manipulator_description/urdf/: final_assembly.urdf
meshes/: base_link.STL  (+8 more)
(+32 files in other folders)
